[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://VS.gd" type="Script" id=3]
[ext_resource path="res://scenes/Boundary.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Ball.tscn" type="PackedScene" id=5]
[ext_resource path="res://art/game_completed.wav" type="AudioStream" id=7]
[ext_resource path="res://art/ball_hit.wav" type="AudioStream" id=8]

[node name="VS" type="Node"]
script = ExtResource( 3 )

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="Top" parent="." instance=ExtResource( 4 )]
position = Vector2( -2.245, 0 )

[node name="Bottom" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, 758 )

[node name="LeftPaddlePosition" type="Position2D" parent="."]
position = Vector2( 0, 354 )

[node name="RightPaddlePosition" type="Position2D" parent="."]
position = Vector2( 950, 354 )

[node name="LeftServePosition" type="Position2D" parent="."]
position = Vector2( 440, 376 )

[node name="RightServePosition" type="Position2D" parent="."]
position = Vector2( 535, 376 )

[node name="Ball" parent="." instance=ExtResource( 5 )]
position = Vector2( 94.3874, -32.0917 )
speedUpPercent = 0.05

[node name="Gameover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="BallHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="ServeTimer" type="Timer" parent="."]

[connection signal="hit_paddle" from="Ball" to="." method="_on_Ball_hit_paddle"]
[connection signal="out_of_bounds" from="Ball" to="." method="_on_Ball_out_of_bounds"]
